syntax ="proto3";

package com.bbstone.pisces.proto;

option optimize_for = SPEED;
option java_package = "com.bbstone.pisces.proto";
option java_outer_classname="BFileMsg";

message BFileReq{
    string magic = 1;
    string cmd = 2;
    string filepath = 3;
    
    uint64 ts = 4;
}

message BFileRsp{
    string magic = 1;
    string cmd = 2;
    string filepath = 3;

    uint64 fileSize = 4;
    string checksum = 5;
    string rspData = 6;
    bytes fileChunkData = 7;

    uint64 reqTs = 8;
    uint64 rspTs = 9;
}
